2003-09-09  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkglwidget.c (gtk_widget_set_gl_capability): Check whether
	given widget has own GdkWindow. GL widget's "realize" signal
	handler should be connected by g_signal_connect() instead of
	g_signal_connect_after().

2003-09-09  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* configure.in (AC_CONFIG_FILES): 
	* examples/Makefile.am (DIST_SUBDIRS): 
	* examples/glade/Makefile.am: 
	* examples/glade/README: 
	* examples/glade/simple.glade: 
	* examples/glade/simple.c: 
	* examples/glade/share-lists.glade: 
	* examples/glade/share-lists.c: Added new libglade examples.

2003-09-04  Alif Wahid  <awah005@users.sourceforge.net>

	* AUTHORS:
	* examples/coolwave2.c
	* examples/Makefile.am:
	* examples/Makefile.mingw:
	* examples/Makefile.msc: Added new example coolwave2.c to 
	test how well a Gtk window behaves in fullscreen mode
	when containing an OpenGL capable drawable. Use the
	popup menu items to change between fullscreen and normal
	mode. Otherwise this is identical to the coolwave.c program.

2003-08-31  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* examples/font-pangoft2-tex.c (gl_tex_pango_ft2_render_layout):
	Fixed texel buffer setup code.

	* examples/font-pangoft2.c (gl_pango_ft2_render_layout): Fixed
	pixel store setup code.

	* gdk/*.c:
	* gdk/x11/*.c:
	* gdk/win32/*.c:
	* gtk/*.c: Use new function call debug macros.

2003-08-26  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gtk/gtkglwidget.c: Use new debug macros.

	* gdk/gdkgldebug.h:
	* gtk/gtkgldebug.h: Added G[DT]K_GL_NOTE_FUNC* debug macros.

2003-08-24  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* gdk/glext/common-header.h:
	* gdk/glext/gen-gdkgl*.pl: Code cleanup. Read common header part
	from common-header.h.

2003-08-18  Naofumi Yasufuku  <naofumi@users.sourceforge.net>

	* ==== Released 1.0.3 ====

	* configure.in: Version 1.0.3, Binary age 3, interface age 1.
