@@ -1,3 +1,8 @@
+2003-09-12  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
+
+	* gtk/gtkglwidget.c (gtk_widget_set_gl_capability) 
+	(gl_widget_private_destroy): Own reference to private->share_list.
+
 2003-09-09  Naofumi Yasufuku  <naofumi@users.sourceforge.net>
 
 	* gtk/gtkglwidget.c (gtk_widget_set_gl_capability): Check whether
